--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.24.0",
+    "autoprefixer": "^10.3.6",
     "next": "11.1.2",
+    "postcss": "^8.3.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tailwindcss": "^2.2.16"
   }
 }
