--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,9 @@
     "**/.DS_Store": true,
     "**/Thumbs.db": true,
     ".next": true,
-    "node_modules": true
+    "node_modules": true,
+    ".env.development.local": true,
+    "yarn.lock": true
   },
   "explorerExclude.backup": null
 }
