--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.24.0",
@@ -15,5 +16,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "tailwindcss": "^2.2.16"
+  },
+  "devDependencies": {
+    "eslint": "~7.32.0",
+    "eslint-config-next": "12.0.4"
   }
 }
