--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "@supabase/supabase-js": "^1.24.0",
     "autoprefixer": "^10.3.6",
     "next": "11.1.2",
